Renamed ETDocumentEditorController to ETWorktableController
git-svn-id: http://svn.gna.org/svn/etoile/trunk/Etoile/Services/Private/Worktable@9840 7b3f36aa-e6db-49c1-8b4c-66eac1997e64

--- a/DocumentEditor-Info.plist
+++ b/DocumentEditor-Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>ETPrincipalControllerClass</key>
-	<string>ETDocumentEditorController</string>
+	<string>ETWorktableController</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
